@@ -3,6 +3,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.7  2004/01/29 19:39:00  jimmyo
+# Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
+#
 # Revision 1.6  2004/01/29 18:07:52  jimmyo
 # Bugfix from bug introduced 30 minutes ago
 #
@@ -500,7 +503,7 @@ sub load_auth_file
 	{
 	    $service = $1;
 	}
-	elsif (/^\s*user\s+(\w+)\s*$/)
+	elsif (/^\s*user\s+(\S+)\s*$/)
 	{
 	    my $tmpid = $1;
 	    $sconf->{$service}{'user'} = &get_uid ($tmpid);
