@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/01/29 19:39:00  jimmyo
+# Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
+#
 # Revision 1.2  2004/01/29 18:57:39  jimmyo
 # Disabled plugins df and df_inode on Solaris (SF#882274).
 #
@@ -47,7 +50,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_vlabel %'
 	df -P -l  | tail +2 | grep -v "//" | while read i; do
 		name=`echo $i | sed 's/[\/.-]/_/g'| awk '{ print $1 }'`
-		echo -n "$name.label "
+		printf "$name.label "
 		echo $i | awk "{ 
 			dir=\$6
 			if (length(dir) <= $MAXLABEL)
@@ -63,6 +66,6 @@ fi
 
 df -P -l | tail +2 | grep -v "//" | while read i; do
 	name=`echo $i | sed 's/[\/.-]/_/g'| awk '{ print $1 ".value " }'`
-	echo -n "$name "
+	printf "$name "
 	echo $i | awk '{ print $5 }' | cut -f1 -d%
 done
