@@ -17,6 +17,9 @@
 # 	queuecrit    - When to crit
 #
 # $Log$
+# Revision 1.2  2004/01/29 19:39:00  jimmyo
+# Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
+#
 # Revision 1.1  2004/01/02 18:50:00  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -90,5 +93,5 @@ if [ "$1" = "config" ]; then
 	exit 0
 fi
 
-echo -n "mails.value "
+printf "mails.value "
 /usr/bin/find $SPOOLDIR -iname "*-H" -print 2>/dev/null |wc -l | sed 's/ *//'
