@@ -7,6 +7,9 @@
 # 	drives		-- List drives to monitor. E.g. "hda hdc".
 #
 # $Log$
+# Revision 1.2  2004/01/29 19:39:00  jimmyo
+# Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
+#
 # Revision 1.1  2004/01/02 18:50:00  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -43,5 +46,5 @@ if [ "$1" = "config" ]; then
         exit 0
 fi
 
-for a in $drives ; do echo -n "$a.value " ; echo "`hddtemp -q /dev/$a | cut -f 3 -d ':'`" | awk '{print $1}' ; done
+for a in $drives ; do printf "$a.value " ; echo "`hddtemp -q /dev/$a | cut -f 3 -d ':'`" | awk '{print $1}' ; done
 
