@@ -18,6 +18,9 @@
 #   regex - regex to use for filtering pgrep/ps output
 #
 # $Log$
+# Revision 1.3  2004/01/29 19:39:00  jimmyo
+# Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
+#
 # Revision 1.2  2004/01/29 18:43:20  jimmyo
 # Changed wildcard plugin ps_ so it can use env.regex in plugin-conf.d/ (SF#882131)
 #
@@ -60,7 +63,7 @@ if [ "$1" = "config" ]; then
 	exit 0
 fi
 
-echo -n "count.value "
+printf "count.value "
 
 PGREP=`which pgrep`
 if [ -n "$PGREP" ]; then
