@@ -14,6 +14,9 @@
 # 	suggest  (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.2  2004/01/29 19:39:00  jimmyo
+# Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
+#
 # Revision 1.1  2004/01/02 18:50:00  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -51,6 +54,6 @@ if [ "$1" = "config" ]; then
 	exit 0
 fi
 
-echo -n "count.value "
+printf "count.value "
 (pgrep -u "$name"; pgrep -U "$name") | sort -u | wc -l
 
